# hnu-cg-helper

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: ai.rs  auth.rs  config.rs  course.rs  error.rs  lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: main.rs  state.rs
crates/server/src/routes/: ai.rs  auth.rs  course.rs  mod.rs
docs/: ai.md  api.md  credentials.md  development.md  structure.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ai-panel.tsx  sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: assignments.tsx  courses.tsx  login.tsx  problem.tsx  problems.tsx
frontend/src/stores/: auth.tsx
